enable ignored tests, use COMPAT locale data provider